adding additional documentation

--- a/Predicting_cancellations.ipynb
+++ b/Predicting_cancellations.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predicting Hotel Booking Cancellations\n",
+    "\n",
+    "The purpose of this project is to predict whether an advanced booking at a hotel will be cancelled by training classification algorithms on a set features to choose between two classes in the target feature - 1 for cancelled and 0 for not cancelled. Cancellations can lead to a loss in revenue for hotels making it a worthwhile endeavour to predict whether a given booking is likley to cancel. \n",
+    "\n",
+    "Five classifiers (three base, two ensemble algorithms) all from different categories are initially tested. Based on the scoring, one base and one ensemble algorithm will be fine-tuned and tested on a subset of data set aside to act as future, unseed data. This project places equal emphasis on the data preprocessing step as it does with the predictive modelling component.\n",
+    "\n",
+    "This dataset can be found on <a href=\"https://www.kaggle.com/jessemostipak/hotel-booking-demand\">Kaggle</a>, and as per the uploader, \"the data is originally from the article Hotel Booking Demand Datasets, written by Nuno Antonio, Ana Almeida, and Luis Nunes for Data in Brief, Volume 22, February 2019.\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -273,14 +286,21 @@
    "source": [
     "# EDA\n",
     "\n",
-    "To understand the data, the follo\n",
-    "\n",
-    "* Proportion of cancellations and non-cancellations\n",
-    "* The number of bookings vs. lead times\n",
-    "* Distribution of lead times among customer segments\n",
-    "* Average daily rate per month\n",
-    "* Average number of bookings by month and day of the week \n",
-    "* Distribution of price among room types"
+    "To understand the data better, some exploratory data analysis is done to gather the following information:\n",
+    "<ul>\n",
+    "  <li>View the characteristics of the data, including missing data, variance of the features, outliers, etc.</li>\n",
+    "  <li>Analyze the target attribute and determine any imbalance.</li>\n",
+    "  <li>Data visualization to show the following:   \n",
+    "    <ul>\n",
+    "      <li>Number of bookings vs. lead times (split by cancelled or not)</li>\n",
+    "      <li>Distribution of lead times among segments</li>\n",
+    "      <li>Average daily rate per month</li>\n",
+    "      <li>Average number of bookings by day of the Week and month</li>    \n",
+    "      <li>Distribution of price among reserved room types</li>        \n",
+    "    </ul>\n",
+    "  </li>\n",
+    "  <li>Correlation between numerical features.</li>\n",
+    "</ul>"
    ]
   },
   {
@@ -1020,78 +1040,7 @@
    "source": [
     "The above table indicates the total number of outliers for each feature using z-score method, all observations are standarized with a standard deviation of 1. Then the z-score for each observation is computed. Any score greater than 3 or less than -3 is considered to be an outlier as 99.7% of the data should be within three standard deviations from the mean. \n",
     "\n",
-    "The percentage of data that the outliers make up in each feature is also included in the second column to gauge how much variation is left in a given feature if its outliers were removed. For example, for 'required_car_parking_spaces', the outliers make up 6.21% of the data. The most common value, zero, makes up 93.79%. If outliers are removed, then the entire feature would be constant at zero and therefore provide no information.\n",
-    "\n",
-    "Now consider the categorical data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def side_by_side(*objs, **kwds):\n",
-    "    from pandas.io.formats.printing import adjoin\n",
-    "    space = kwds.get('space', 4)\n",
-    "    reprs = [repr(obj).split('\\n') for obj in objs]\n",
-    "    print(adjoin(space, *reprs))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            meal                deposit_type                     customer_type               reservation_status\n",
-      "BB         92310    No Deposit        104641    Transient                89613    Check-Out               75166\n",
-      "HB         14463    Non Refund         14587    Transient-Party          25124    Canceled                43017\n",
-      "SC         10650    Refundable           162    Contract                  4076    No-Show                  1207\n",
-      "Undefined   1169                                Group                      577                                 \n",
-      "FB           798                                                                                               \n"
-     ]
-    }
-   ],
-   "source": [
-    "meal = pd.DataFrame(df_eda['meal'].value_counts())\n",
-    "market = pd.DataFrame(df_eda['market_segment'].value_counts())\n",
-    "distribution = pd.DataFrame(df_eda['distribution_channel'].value_counts())\n",
-    "deposit = pd.DataFrame(df_eda['deposit_type'].value_counts())\n",
-    "customer = pd.DataFrame(df_eda['customer_type'].value_counts())\n",
-    "reservation = pd.DataFrame(df_eda['reservation_status'].value_counts()) \n",
-    "\n",
-    "side_by_side(meal, deposit, customer, reservation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "               market_segment               distribution_channel\n",
-      "Online TA               56477    TA/TO                     97870\n",
-      "Offline TA/TO           24219    Direct                    14645\n",
-      "Groups                  19811    Corporate                  6677\n",
-      "Direct                  12606    GDS                         193\n",
-      "Corporate                5295    Undefined                     5\n",
-      "Complementary             743                                   \n",
-      "Aviation                  237                                   \n",
-      "Undefined                   2                                   \n"
-     ]
-    }
-   ],
-   "source": [
-    "side_by_side(market, distribution)"
+    "The percentage of data that the outliers make up in each feature is also included in the second column to gauge how much variation is left in a given feature if its outliers were removed. For example, for 'required_car_parking_spaces', the outliers make up 6.21% of the data. The most common value, zero, makes up 93.79%. If outliers are removed, then the entire feature would be constant at zero and therefore provide no information."
    ]
   },
   {
@@ -1119,7 +1068,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the information on the categorical features indicate that some features, i.e. 'meal', 'customer_type', etc, contain only a small number of unique values and is more manageable. However, 'country' and 'agent' have 177 and 333 unqiue values respectively, making them more difficult to encode. It may be more productive to group them into bins."
+    "The above are categorical attributes with a large number of unique values: 'country' and 'agent' have 177 and 333 unqiue values respectively, making them more difficult to encode. It may be more productive to group them into bins."
    ]
   },
   {
@@ -1293,7 +1242,7 @@
    "source": [
     "The daily rate for both the resort and city hotel are clearly higher in the summer months compared to the cooler months. Rates for resort hotels peak in July and August. For city, the rates are reduced slightly during these months, possibly to compete with resort hotels. However the rates for resort are generally cheaper throughout the year, and are only more expensive then city during June to August. During this part of the analysis, it was discovered that there was an outlier with an apr = 5400, which was removed for this visualization. \n",
     "\n",
-    "The next part of the analysis requires the days of the week (Monday, Tuesday, etc.) not availble in the raw data. Fortuantely with calendar.weekday this information can be generated if year, month, and day is given. However some intial preprocessing will is required."
+    "The next part of the analysis requires the days of the week (Monday, Tuesday, etc.) not availble in the raw data. Fortuantely with calendar.weekday this information can be generated if year, month, and day is given. However some intial preprocessing is required."
    ]
   },
   {
@@ -1478,7 +1427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Preparation & Build Pipeline"
+    "## Data Preparation & Construction of Transformation Pipeline"
    ]
   },
   {
@@ -1747,7 +1696,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "X[['lead_time','days_in_waiting_list']] = X[['lead_time','days_in_waiting_list']].astype(float)"
    ]
   },
@@ -1773,7 +1721,8 @@
     "* <b>'country'</b> contains 177 unique values. Countries that generate less than a specified amount of booking will be grouped together.\n",
     "* <b>'agent'</b> contains 333 unique values. Agents will discretized into bins based on the amount of bookings they generate.\n",
     "* Using the 'week_func' function in the previous section, a weekday column will be generated. The features <b>'arrival_date_week_number'</b> and <b>'arrival_date_day_of_month'</b> will be dropped to reduce dimensionality.\n",
-    "* All missing values for numerical features will be assigned 0 as a placeholder, catergorical features will be assigned 'unknown'."
+    "* All missing values for numerical features will be assigned 0 as a placeholder, catergorical features will be assigned 'unknown'.\n",
+    "* All categorical features will be one hot encoded"
    ]
   },
   {
@@ -1888,6 +1837,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define features to be one hot encoded.\n",
     "X_cat = ['arrival_date_year', 'arrival_date_month', 'meal', 'country', 'market_segment', 'distribution_channel', \n",
     "         'reserved_room_type', 'assigned_room_type', 'deposit_type', 'customer_type', 'agent_bins', \n",
     "         'weekday']"
@@ -1899,8 +1849,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Keep in mind that for the binary features (Bernoulli random variables) variance is calculated as: Var(x)=p(1−p)\n",
-    "\n",
+    "# Create transformation pipeline to target specific features \n",
     "preprocess_scaled = ColumnTransformer(transformers=[('drop_columns', 'drop', ['company','reservation_status','reservation_status_date']),\n",
     "                                                    ('scaler', StandardScaler(), ['adr']),\n",
     "                                                    ('impute_num', SimpleImputer(strategy='constant', fill_value=0), ['children']),\n",
@@ -1909,11 +1858,6 @@
     "                                      remainder='passthrough',\n",
     "                                      sparse_threshold=0)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1929,11 +1873,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The full preprocessing steps will first apply the three custom transformers to the data, followed by the preprocessing steps that target specific features, and then finally as a feature selection method the variance threshold will select features that meet the specified variance threshold. \n",
+    "\n",
+    "Some parameters are intially tweaked for the model selection phase:\n",
+    "* All countries that produce 100 or less bookings will be grouped together in the 'country' feature.\n",
+    "* Agent numbers are discretized into 20 equal-width bins in the new 'agent_bins' feature. \n",
+    "* Variance threshold is set to 0.0475\n",
+    "\n",
+    "Keep in mind that for the binary features (Bernoulli random variables) variance is calculated as: Var(x) = p(1−p)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Prepare the training data for the model selection phase\n",
     "train_X_prepared = full_preprocess.fit_transform(train_X)"
    ]
   },
@@ -1976,7 +1935,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create custom scroer using the f1-score for '1' in the target variable. \n",
+    "# Create custom metric using the f1-score for minority class in target feature (1). \n",
     "f1_scorer = make_scorer(f1_score, pos_label=1)"
    ]
   },
@@ -2080,9 +2039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Boxplots are used to visualize each individual score from the 10-fold cross-validation. For both scoring metrics, the distribution for each classifier is small. The KNN and logisitic regression model is observed to have comparable performance, there are instances of logistic regression scoring higher accuracy than KNN. \n",
-    "\n",
-    "Without tuning any hyperparameters, two of the base models are able to achieve "
+    "Boxplots are used to visualize each individual score from the 10-fold CV of each model. For both scoring metrics, the distribution of scores for each classifier is small. This shows very distinct performances across the classifiers with the exception of KNN and logisitic regression model where they are observed to have comparable performance. There are instances of logistic regression scoring higher accuracy than KNN."
    ]
   },
   {
