adding to notebook

--- a/Predicting_cancellations.ipynb
+++ b/Predicting_cancellations.ipynb
@@ -2106,7 +2106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To find the optimal k value, an elbow plot is graphed to visualize the error rate for each additional neighbor. 25 different KNN models are essentially trained on the training set, and predicted on the validation set and the number of wrong predictions made by each model is recorded. Prior to this, the validation set is preprocessed in the exact same manner as the training set by using full_preprocess.transform."
+    "To find the optimal k value, an elbow plot is graphed to visualize the error rate for each additional neighbor. 25 different KNN models are essentially trained on the training set, and predicted on the validation set and the number of wrong predictions made by each model is recorded. The validation set is preprocessed using the same pipeline as the training set. "
    ]
   },
   {
@@ -2487,7 +2487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Performance increase offered from the gridsearch was very minimal. Overall accuracy and f1-score for the minorty class remained the same (recall for the minority class increased by a point)."
+    "Performance increase offered from the gridsearch was very minimal. Overall accuracy and f1-score for the minorty class remained the same (recall for the minority class increased by a point). "
    ]
   },
   {
